fixed mobile and the spacing for jobs titles and dates

--- a/src/Components/Pages/Resume.css
+++ b/src/Components/Pages/Resume.css
@@ -6,6 +6,12 @@
   justify-content: space-evenly;
 }
 
+.Center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Left-Side {
   display: flex;
   flex-direction: column;
@@ -107,6 +113,7 @@
   align-items: flex-start;
   padding: 0;
   margin: 0;
+  margin-bottom: 5rem;
 }
 
 .Courses-List li {
@@ -125,11 +132,14 @@
   flex-direction: column;
   max-height: 100%;
   width: 100%;
-  justify-content: left;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .Work {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   padding: 0;
   margin: 0;
   margin-left: 1rem;
@@ -219,7 +229,7 @@
     display: flex;
     flex-direction: column;
     min-width: 100%;
-    min-height: 35%;
+    min-height: 50%;
     background-color: lightgray;
     order: 1;
   }
@@ -228,8 +238,9 @@
     display: flex;
     flex-direction: column;
     min-width: 100%;
-    height: 65%;
+    min-height: 65%;
     order: 2;
+    margin-bottom: 5rem;
     /*
   background-color: aquamarine;
   */
